package parser;

/**
 * Enum representing all possible command types.
 */
public enum CommandType {
    ADD, LIST, DELETE, EDIT, SORT, SEARCH, STATUS, TAG, HELP, BYE, UNKNOWN, ERROR
}